--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -8,7 +8,8 @@
             "format_on_save": "off",
             "show_whitespaces": "all",
             "remove_trailing_whitespace_on_save": false,
-            "auto_indent_on_paste": false
+            "auto_indent_on_paste": false,
+            "ensure_final_newline_on_save": false
         }
     }
 }
