ditch log.Fatal*, use both /info and /asic, better color tagging, comments, and cleaning

--- a/config.toml
+++ b/config.toml
@@ -27,6 +27,9 @@ info "Hashrate" hashrate
 info "Efficiency" efficiency
 info "Heap" heap
 
+"Settings:" 600MHz@1040mV
+what else?
+
 prin circlejerking into open source
 InFo "invalid line" invalid
 """
