--- a/contrib/config.example.toml
+++ b/contrib/config.example.toml
@@ -1,32 +1,35 @@
 [general]
 # IP address of your *axe
 ip = 'replace me'
-# Separator between subtitle and info
-separator = ':'
-# Underline char
-underline = '-'
+
+[display]
+# Neofetch-like, uses 'info' and 'prin'
+# Supports 16 and hex colors, bg coloring, and bold/italic/underline with chainable color tags
+# '{white}', '{bg#ff00ff}', '{italic}{bgmagentabright}'
+# invalid lines are ignored
+format = "this is an invalid line, so its not printed :3\ninfo title\ninfo underline\ninfo \"Model\" model\ninfo \"ASIC(s)\" asicmodel\ninfo \"Firmware\" firmware\ninfo \"Uptime\" uptime\ninfo \"Best Difficulty\" bestdiff\ninfo \"Shares\" shares\ninfo \"Pool\" pool\ninfo \"Hashrate\" hashrate\ninfo \"Efficiency\" efficiency\ninfo \"Heap\" heap\n\nprin circlejerking into open source"
 # Selected icon name or path
 # Default: 'model'
 # Values: 'none', 'vendor', 'family', 'model', path to ascii art in a plaintext file
 icon = 'model'
 # Spaces between the icon and the info
 icon_spacing = 3
-
-[display]
-# Neofetch-like, uses 'info' and 'prin'
-# Supports 16 colors and hex colors, wrap them in {}
-format = "this is an invalid line, so its not printed :3\ninfo title\ninfo underline\ninfo \"Model\" model\ninfo \"ASIC(s)\" asicmodel\ninfo \"Firmware\" firmware\ninfo \"Uptime\" uptime\ninfo \"Best Difficulty\" bestdiff\ninfo \"Shares\" shares\ninfo \"Pool\" pool\ninfo \"Hashrate\" hashrate\ninfo \"Efficiency\" efficiency\ninfo \"Heap\" heap\n\nprin circlejerking into open source"
-# Default: 'board'
+# Default: 'family'
 # Values: 'vendor', 'family', 'manual'
-colors = 'family'
+theme = 'family'
 bold_titles = true
+# Separator between subtitle and info
+separator = ':'
+# Underline char
+underline = '-'
 
-[colors]
+# Supports everything display.format does
+[theme]
 title = 'green'
-at = 'white'
-underline = 'blackbright'
-subtitle = 'green'
-separator = 'blackbright'
+at = 'green'
+underline = 'white'
+subtitle = 'white'
+separator = 'white'
 info = 'white'
 
 [title]
